from sqlalchemy import Column, Integer, String, Float
from .base import Base

class Produit(Base):
    __tablename__ = 'produits'

    id_produit = Column(Integer, primary_key=True)
    nom = Column(String)
    prix = Column(Float)

